# business-assistant-rtm-plugin

./: .env.example  .gitignore  CLAUDE.md  README.md  code_analysis_rules.json  pyproject.toml
docs/: authentication.md
src/business_assistant_rtm/: __init__.py  config.py  constants.py  plugin.py  rtm_client.py  rtm_service.py
tests/: conftest.py  test_auth_tools.py  test_plugin_registration.py  test_rtm_client.py  test_rtm_service.py  test_rtm_service_mutations.py
